--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,11 @@
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= task.title %></li>
+    <li><%= link_to task.title, task_path(task) %></li>
   <% end %>
 </ul>
+
+<%# <ul>
+  <% @restaurants.each do |restaurant| %>
+    <%# <li><%= link_to restaurant.name, restaurant_path(restaurant) %>
+  <%# <% end %>
+<%# </ul> %>
